# AsyncWebClient

./: .gitignore  AsyncWebClient.sln  AsyncWebClient.vcxproj  AsyncWebClient.vcxproj.filters  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
conn/: MessageBroker.h  SecureAsyncConnection.cpp  SecureAsyncConnection.h  SecureAsyncConnectoin.cpp  User.cpp  User.h
core/: AppCore.cpp  AppCore.h  SecureAsyncConnection.cpp  SecureAsyncConnection.h
crypto/: dh.cpp  dh.h
data/: DataProcess.cpp  DataProcess.h  MessageBroker.h
format/: json.cpp  json.h
forms/: mainwindow.cpp  mainwindow.h  mainwindow.ui  widgetmessages.cpp  widgetmessages.h  widgetmessages.ui
gui/: App.cpp  App.h
log/: logger.cpp  logger.h
test/: test.cpp  test.h
utils/: json.cpp  json.h
